[tool.poetry]
name = "spark-web"
version = "0.1.0"
description = "A model-centric web framework"
authors = ["Jake Derry"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
